--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -1,32 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.xreal.ai.camera">
 
     <!-- Permissions -->
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PROJECTION" />
+    
+    <!-- XR Required features -->
+    <uses-feature android:name="android.hardware.camera" android:required="true" />
+    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
 
     <application
         android:icon="@mipmap/app_icon"
         android:label="@string/app_name"
-        android:theme="@style/UnityThemeSelector">
+        android:theme="@style/UnityThemeSelector"
+        tools:replace="android:allowBackup"
+        android:allowBackup="false">
 
-        <!-- Entry point: UnityPlayerActivity のみ -->
+        <!-- XReal Unity Activity - Override XR Manifest -->
         <activity
             android:name="com.unity3d.player.UnityPlayerActivity"
             android:launchMode="singleTask"
             android:screenOrientation="landscape"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:exported="true">
+            android:exported="true"
+            tools:replace="android:launchMode,android:screenOrientation,android:configChanges,android:exported">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <meta-data android:name="unityplayer.UnityActivity" android:value="true" />
         </activity>
+
+        <!-- XReal SDK Configuration -->
+        <meta-data
+            android:name="nreal_sdk"
+            android:value="true"
+            tools:replace="android:value" />
+        <meta-data
+            android:name="com.nreal.supportDevices"
+            android:value="1|XrealLight|2|XrealAir"
+            tools:replace="android:value" />
 
     </application>
 </manifest>
