🔧 XREAL表記修正 & プロジェクト詳細明確化
✅ 修正内容:
- XReal → XREAL 表記統一
- XREAL One Pro & XREAL Eye 対応明記
- 画像認識プロジェクトとして詳細化
- supportDevices に OnePro, Eye 追加
- 包括的なREADME作成

🎯 対象デバイス:
- XREAL One Pro (高性能AR画像処理)
- XREAL Eye (視線追跡 + 画像認識)

📦 技術構成: Unity 6 + AR Foundation + XREAL SDK

--- a/.github/workflows/unity-build.yml
+++ b/.github/workflows/unity-build.yml
@@ -1,4 +1,4 @@
-name: Unity Build - XReal AI Camera
+name: Unity Build - XREAL AI Camera
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: Build XReal AI Camera
+    name: Build XREAL AI Camera
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -49,7 +49,7 @@ jobs:
       - name: Upload APK
         uses: actions/upload-artifact@v3
         with:
-          name: xreal-ai-camera-apk
+          name: xreal-ai-camera-image-recognition-apk
           path: build/xreal_ai_cam.apk
 
       # Upload to Release (on tag)
